# StepNN

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindFMT.cmake  FindNeoML.cmake  Findspdlog.cmake  Install.cmake  Target.cmake
cmake/helpers/: DatasetPathes.h.in  ExportLib.h.in
cmake/sdk/: cuDNN.cmake  fmt.cmake  libtorch.cmake  neoml.cmake  sdk.cmake  spdlog.cmake
datasets/: Datasets.cmake
datasets/Datasets/MNIST/: DatasetMNIST.cpp  DatasetMNIST.h  DatasetNeoML_MNIST.cpp  DatasetNeoML_MNIST.h
datasets/Datasets/MNIST/Impl/: DatasetMNIST_NeoML.cpp  DatasetMNIST_NeoML.h  DatasetMNIST_Torch.cpp  DatasetMNIST_Torch.h
examples/: Examples.cmake
examples/Examples/Logging/: Logging.cmake  LoggingExample.cpp
examples/Examples/MNIST/: MNIST.cmake  mnist.cpp
src/: StepNN.cmake
src/Neural/Data/: LayerData.h  LayerType.h  NeuralFrameworkType.h
src/Neural/Interfaces/: ILayer.h  ILayerEngine.h  ILayerFactory.h  ILayerGraph.h  INeuralEngine.h  INeuralNet.h
src/Neural/Layer/Engine/: BaseLayerEngine.cpp  BaseLayerEngine.h
src/Neural/Layer/Graph/: LayerGraph.cpp  LayerGraph.h
src/Neural/Layer/Settings/: BaseLayerSettings.h  ConvLayerSettings.h
src/Neural/NeuralEngines/: NeuralEngine.cpp  NeuralEngine.h
src/Neural/NeuralEngines/NeuralEngineDummy/: NeuralEngineDummy.cpp  NeuralEngineDummy.h
src/Neural/NeuralEngines/NeuralEngineNeoML/: NeuralEngineNeoML.cpp  NeuralEngineNeoML.h
src/Neural/NeuralEngines/NeuralEngineNeoML/LayerEngine/: LayerEngineNeoML.LayerFactory.cpp  LayerEngineNeoML.h
src/Neural/NeuralEngines/NeuralEngineNeoML/Layers/: BaseLayerNeoML.h  ConvLayerNeoML.cpp
src/Neural/NeuralEngines/NeuralEngineNeoML/NeuralNet/: NeuralNetNeoML.h
src/Neural/NeuralEngines/NeuralEngineTF/: NeuralEngineTF.cpp  NeuralEngineTF.h
src/Neural/NeuralEngines/NeuralEngineTF/LayerEngine/: LayerEngineTF.LayerFactory.cpp  LayerEngineTF.h
src/Neural/NeuralEngines/NeuralEngineTF/Layers/: BaseLayerTF.h  ConvLayerTF.cpp
src/Neural/NeuralEngines/NeuralEngineTF/NeuralNet/: NeuralNetTF.h
src/Neural/NeuralEngines/NeuralEngineTorch/: NeuralEngineTorch.cpp  NeuralEngineTorch.h
src/StepNN/Neural/Data/: BlobDataType.h  CeilMode.h  ClassificationSettings.h  DeviceType.h  LayerType.h  NeuralConfiguration.h  NeuralFrameworkType.h  PaddingMode.h  PoolingMode.h
src/StepNN/Neural/Engine/: NeuralEngine.cpp  NeuralEngine.h
src/StepNN/Neural/Impl/NeoML/: CommonNeoML.h
src/StepNN/Neural/Interfaces/: BaseDataset.cpp  BaseDataset.h  BaseDatasetController.cpp  BaseDatasetController.h  BaseLayerEngine.cpp  BaseLayerEngine.h  BaseNeuralConfigurator.cpp  BaseNeuralConfigurator.h  BaseNeuralNet.cpp  BaseNeuralNet.h  DefaultLayerID.h  IDataset.h  IDatasetController.h  IDatasetUser.h  IDatasetUserImpl.h  ILayer.h  ILayerEngine.h  ILayerFactory.h  ILayerGraph.h  INeuralConfigurator.h  INeuralEngine.h  INeuralNet.h  ITrainable.h  Stub.cpp
src/StepNN/Neural/Layer/: LayerGraph.cpp  LayerGraph.h
src/StepNN/Neural/NeuralEngines/: NeuralEngine.cpp  NeuralEngine.h
src/StepNN/Types/: CommonDefs.h
src/StepNN/Utils/Algorithms/: FindPair.h
src/StepNN/Utils/Containers/: Graph.h
src/StepNN/Utils/Interfaces/: AutoZero.h  BitMaskEnum.h  EventHandlerList.h  EventPublisher.h  IUserController.h  TypeTraits.h
src/StepNN/Utils/Logging/: Logging.cpp  Logging.h  LoggingCommon.cpp  LoggingCommon.h  LoggingFactory.cpp  LoggingFactory.h  LoggingOutputMode.h  LoggingSettings.h  LoggingSyncMode.h
src/Utils/Containers/: Graph.h
(+146 files in other folders)
